@@ -6,11 +6,8 @@
 #ifndef __EPI_ATOM_TYPE_H
 #define __EPI_ATOM_TYPE_H
 
-typedef enum
-{
-  atom_holds = 0,
-  atom_subst = 1,
-  atom_memb  = 2
-} atom_type_type;
+#define EPI_ATOM_HOLDS 1
+#define EPI_ATOM_SUBST 2
+#define EPI_ATOM_MEMB  3
 
 #endif
