@@ -1,9 +1,14 @@
 2002-08-11  Vino Crescini  <jcrescin@cit.uws.edu.au>
 
+	* kb/atom_type.h
+	* kb/gnd_atom.c
+	* kb/gnd_atom.h
+	* parser/parser.y
 	* kb/atom_identifier.h :
-	* kb/atom_type.h :
 
 	  - Renamed atom_identifier to atom_type.
+
+	  - Changed atom_type from enum to macros.
 
 	* Makefile :
 
